<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingsActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/settings_toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/settings" />

    <LinearLayout
        android:id="@+id/linerSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:divider="@color/colorPrimary"
        android:dividerPadding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/settings_toolbar">

        <Switch
            android:id="@+id/switchTemperature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:fontFamily="sans-serif-light"
            android:padding="15dp"
            android:showText="true"
            android:text="@string/temperature"
            android:textOff="@string/f"
            android:textOn="@string/c"
            android:textSize="24sp" />

        <Switch
            android:id="@+id/switchSpeed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:fontFamily="sans-serif-light"
            android:padding="15dp"
            android:showText="true"
            android:text="@string/wind_speed"
            android:textOff="@string/speed_kph"
            android:textOn="@string/speed_mph"
            android:textSize="24sp" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>